# picoio

./: .gitignore  API.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-assign.yml  docs.yml  python-publish.yml
docs/: README.md  api.rst  conf.py  index.rst  install.rst
docs/_templates/: versions.html
scripts/: cibuildwheel-before-build-linux.sh  install-deps.sh
src/picoio/: __init__.pxd  __init__.py  arrow.pxd  arrow.pyi  arrow.pyx  json.pxd  json.pyi  json.pyx  toml.pxd  toml.pyi  toml.pyx  zip.cpp  zip.hpp  zip.pyi
src/picoio/_experimental/: flist.pxd  flist.pyi  flist.pyx
tests/: __init__.py  test_picoio.py
