[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy",
    "pyarrow",
    "pybind11",
    "picobuild==0.0.5b1"
]
build-backend = "setuptools.build_meta"

[project]
name = "picoio"
description = "CPython file io utilities."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "ckirua", email = "aquipongoalgo.dsz@gmail.com" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "setuptools>=80.9.0",
    "Cython",
    "picobuild==0.0.5b1",
    "numpy",
    "pyarrow",
    "pybind11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "sphinx>=7.0.0", "sphinx-rtd-theme>=2.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "picoio.__about__.__version__" }

[tool.cibuildwheel]
# 3.13 and 3.14, normal and free-threaded (align with requires-python = ">=3.13").
enable = ["cpython-freethreading"]
build = "cp313-* cp314-* cp313t-* cp314t-*"
# Use container env (before_build installs deps + LIBRARY_PATH for Arrow).
build-frontend = { name = "build[uv]", args = ["--no-isolation"] }
